--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/board.css">
     <title>My first Kanban board</title>
+    <script type="module" src="./component/ws-login.define.js"></script>    
     <script type="module" src="./js/board.js"></script>
 </head>
 
