support browsers that don't have top level await implemented yet

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/board.css">
     <title>My first Kanban board</title>
-    <script type="module" src="./component/ws-login.define.js"></script>
+    <!-- <script type="module" src="./component/ws-login.define.js"></script> -->
+    <script src="./component/ws-login.no-toplevel-await.js"></script>
     <script type="module" src="./js/board.js"></script>
 </head>
 
